Рефакторинг `UserServiceImplTest`
- Рефакторинг `UserServiceImpl`.
- Рефакторинг `UserServiceImplTest`.
- Рефакторинг `KapperInfoServiceImpl`.
- Мелкий рефакторинг остального.